# homework3-algarv

./: README.md
arm_move/: CMakeLists.txt  arm_box  package.xml
arm_move/config/: box_world.world  waypoints.yaml
arm_move/launch/: arm.launch  arm.test  arm_box.launch  arm_rviz.launch
arm_move/nodes/: mover
arm_move/srv/: follow.srv  restart.srv  step.srv
arm_move/test/: arm_test
diff_drive/: CMakeLists.txt  ddrive.gazebo.xacro  ddrive.sdf  ddrive.urdf  ddrive.urdf.xacro  package.xml
diff_drive/config/: robot_params.yaml  rviz_setup.rviz  rviz_setup_gazebo.rviz
diff_drive/launch/: ddrive.launch  ddrive_rviz.launch
diff_drive/nodes/: flip
diff_drive/urdf/: ddrive.gazebo.xacro
diff_drive/world/: ddrive.world
